--- a/configs/model_configs/GoLLIE-7B-Test.yaml
+++ b/configs/model_configs/GoLLIE-7B-Test.yaml
@@ -2,9 +2,10 @@
 model_name_or_path: HiTZ/GoLLIE-7B
 torch_dtype: bfloat16
 use_lora: true
+quantization: 4
 quantization_inference: null
 gradient_checkpointing: true
-force_auto_device_map: true
+force_auto_device_map: false
 use_flash_attention: true
 
 # dataset arguments
