--- a/configs/data_configs/semeval2023task3subtask3_config.json
+++ b/configs/data_configs/semeval2023task3subtask3_config.json
@@ -3,8 +3,8 @@
     "tasks": ["NER"],
     "dataloader_cls": "src.tasks.semeval2023task3subtask3.data_loader.SemEvalDatasetLoader",
     "sampler_cls": "src.tasks.semeval2023task3subtask3.data_loader.SemEvalSampler",
-    "train_file": "data/original/train-mwar-token.csv",
-    "dev_file": "data/original/dev-mwar-token.csv",
+    "train_file": "data/train",
+    "dev_file": "data/dev",
     "prompt_template": "templates/prompt.txt",
     "seed": [0, 24, 42],
     "label_noise_prob": [0.15, 0.50, 0.75],
