Fix data preprocess

--- a/configs/model_configs/GoLLIE-7B.yaml
+++ b/configs/model_configs/GoLLIE-7B.yaml
@@ -13,7 +13,7 @@ dataset_dir:
   /content/drive/MyDrive/Propaganda/Gollie/SemEval/
 train_tasks:
   - semeval2023task3subtask3.ner
-validation_tasks:
+test_tasks:
   - semeval2023task3subtask3.ner
 max_examples_per_task_train: 30000
 max_examples_per_task_val: 5000
