--- a/configs/data_configs/semeval2023task3subtask3_config.json
+++ b/configs/data_configs/semeval2023task3subtask3_config.json
@@ -3,9 +3,9 @@
     "tasks": ["NER"],
     "dataloader_cls": "src.tasks.semeval2023task3subtask3.data_loader.SemEvalDatasetLoader",
     "sampler_cls": "src.tasks.semeval2023task3subtask3.data_loader.SemEvalSampler",
-    "train_file": "data/train",
-    "dev_file": "data/dev",
-    "test_file": "data/dev",
+    "train_file": "data/only_english/train",
+    "dev_file": "data/only_english/dev",
+    "test_file": "data/only_english/dev",
     "prompt_template": "templates/prompt.txt",
     "seed": [0, 24, 42],
     "label_noise_prob": [0.15, 0.50, 0.75],
